[package]
name = "putting_it_all_together"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

[dependencies]
jsonrpc-core = "10.0.1"
jsonrpc-http-server = "10.0.1"
jsonrpc-derive = "10.0.2"
serde = "1.0.87"
secp256k1 = {version="0.12.2", features= ["rand"]}
rand = "0.4"
hex = "0.3.1"
rust-crypto = "0.2.36"
t_bang = "0.1.2"
chrono = "0.4.0"
