[package]
name = "wasm-tutorial"
version = "0.1.0"
authors = ["hskang9 <hskang9@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.34" # this version only supports webpack currently(02/15/19)
secp256k1 = {version="0.12.2", features= ["rand"]}
rand = "0.4"