[build-dependencies]
vergen = '3'

[dependencies]
error-chain = '0.12'
exit-future = '0.1'
futures = '0.1'
hex-literal = '0.1'
log = '0.4'
parity-codec = '3.0'
parking_lot = '0.7.1'
slog = '^2'
tokio = '0.1'
trie-root = '0.11.0'

[dependencies.basic-authorship]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-basic-authorship'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.consensus]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.ctrlc]
features = ['termination']
version = '3.0'

[dependencies.inherents]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-inherents'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.node-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.node-template-runtime]
path = 'runtime'

[dependencies.primitives]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.sr-io]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.substrate-cli]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.substrate-client]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.substrate-executor]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.substrate-network]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.substrate-service]
git = 'https://github.com/paritytech/substrate.git'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.transaction-pool]
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-transaction-pool'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[[bin]]
name = 'substrate-tutorial'
path = 'src/main.rs'
[profile.release]
panic = 'unwind'

[package]
authors = ['Parity Technologies <admin@parity.io>']
build = 'build.rs'
edition = '2018'
name = 'node-template'
version = '0.9.0'
