[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.parity-codec]
default-features = false
version = '3.0'

[dependencies.parity-codec-derive]
default-features = false
version = '3.0'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = '71fb444830ad8bebb0fb7fd0bbaa9ac9c67092bb'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'parity-codec-derive/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde/std',
    'safe-mix/std',
    'consensus-aura/std',
]

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '0.9.0'
